--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "19.2.3",
     "react-dropzone": "^15.0.0",
     "tailwind-merge": "^3.4.1",
+    "tsx": "^4.21.0",
     "uuid": "^13.0.0",
     "zod": "^4.3.6"
   },
