--- a/render.yaml
+++ b/render.yaml
@@ -24,9 +24,11 @@ services:
     name: quantum-scale-worker
     env: node
     plan: free
-    buildCommand: npm install && npm run build
+    buildCommand: npm install
     startCommand: npx tsx src/worker/index.ts
     envVars:
+      - key: NODE_VERSION
+        value: 20
       - key: DATABASE_URL
         fromDatabase:
           name: quantum-db
