--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,11 @@
 services:
-  # 1. The Main Next.js App
+  # UNIFIED SERVICE: Web + Worker (Free Tier optimized)
   - type: web
-    name: quantum-scale-web
+    name: quantum-scale-app
     env: node
     plan: free
     buildCommand: npm install && npm run build
-    startCommand: npm run start
+    startCommand: npm run start:prod
     envVars:
       - key: DATABASE_URL
         fromDatabase:
@@ -18,30 +18,10 @@ services:
           property: connectionString
       - key: NODE_VERSION
         value: 20
-
-  # 2. The Background Worker (Converted to Web for FREE tier)
-  - type: web
-    name: quantum-scale-worker
-    env: node
-    plan: free
-    buildCommand: npm install
-    startCommand: npx tsx src/worker/index.ts
-    envVars:
-      - key: NODE_VERSION
-        value: 20
-      - key: DATABASE_URL
-        fromDatabase:
-          name: quantum-db
-          property: connectionString
-      - key: REDIS_URL
-        fromService:
-          type: redis
-          name: quantum-redis
-          property: connectionString
       - key: PORT
         value: 10000
 
-  # 3. Managed Redis
+  # Managed Redis
   - type: redis
     name: quantum-redis
     plan: free
